<resources>
    <string name="openweathermap_appid">2f3e06e1d1a7d3ac7eb733be32aef344</string>

    <!--Activity labels-->
    <string name="preferences">Preferences</string>

    <!--Actions-->
    <string name="action_search">Search</string>
    <string name="action_location">Location</string>
    <string name="action_voice">Voice</string>

    <!--Placeholders-->
    <string name="loading">Loading…</string>

    <!--Drawer strings-->
    <string name="home">Home</string>
    <string name="jacket_settings">Jacket preferences</string>
    <string name="support_development">Support development</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!--Preference strings-->
    <string name="pref_user_key">user_name</string>
    <string name="pref_user_title">Your Name</string>
    <string name="pref_user_summary">A username for a special snowflake</string>
    <string name="pref_nsfw_key">nsfw_mode</string>
    <string name="pref_nsfw_title">NSFW Mode</string>
    <string name="pref_nsfw_summary">Toggle potentially NSFW prompts for your Jacket preferences</string>
    <string name="pref_temp_key">temp_unit</string>
    <string name="pref_temp_title">Temperature Unit</string>

    <string-array name="pref_temp_options">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="pref_temp_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!--Lorem Ipsum-->
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_line">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis nibh arcu, eget tempus lacus consequat vel. Donec luctus tincidunt erat, ac eleifend sapien elementum pulvinar. Donec nec ipsum ultricies, finibus mauris at, consectetur est. Curabitur tempor ex eget elit efficitur iaculis. Ut tristique molestie est, eget semper leo faucibus hendrerit. Phasellus vel varius erat. Aliquam sit amet condimentum sapien. Nulla tristique, elit laoreet venenatis euismod, velit neque tempus eros, in malesuada diam sem facilisis purus. Sed dapibus, ipsum eget tempus fringilla, arcu elit elementum lectus, volutpat rhoncus ligula neque ac velit. Maecenas sapien enim, ornare sed magna id, bibendum auctor enim. Praesent vestibulum lacinia eleifend.</string>

    <!--Test/Mock-->
    <string name="test_animation">Testing single element</string>
    <string name="test_transition">Testing multiple shared elements</string>
    <string name="test_bottom_sheet">Testing Bottom Sheet</string>

</resources>
