<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">

        <EditTextPreference
            android:key="@string/pref_user_key"
            android:summary="@string/pref_user_summary"
            android:title="@string/pref_user_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_nsfw_key"
            android:summary="@string/pref_nsfw_summary"
            android:title="@string/pref_nsfw_title" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_temp_options"
            android:entryValues="@array/pref_temp_values"
            android:key="@string/pref_temp_key"
            android:summary="%s"
            android:title="@string/pref_temp_title" />

    </PreferenceCategory>

</PreferenceScreen>